# if.u.service

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: osdb_demo.py  whoosh_demo.py
demo/whoosh_data/whoosh_index/: MAIN_6ijhe1n43p6u1mqa.seg  MAIN_fl24i6yaaij4qn3w.seg  MAIN_hc4o902ll9gpve8p.seg  _MAIN_3.toc
src/: main.py
src/agents/: base_agent.py  extract_custom_agent.py  extract_people_agent.py
src/ai/: agent.py
src/app/: api.py  app.py
src/models/: comment.py  custom.py  organization.py  people.py  user.py
src/services/: custom.py  organization.py  people.py  user.py
src/storage/: people_store.py
src/utils/: __init__.py  config.py  error.py  kdb.py  kwdb.py  logger.py  mailer.py  obs.py  ocr.py  rldb.py  sms.py  vsdb.py
src/web/: api.py  auth.py  custom.py  people.py  permission.py  recognition.py  schemas.py  user.py
test/: test_logger.py
