[project]
name = "service"
version = "0.1.0"
description = "This project is the web servcie sub-system for if.u projuect"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-ocr-api20210707>=3.1.3",
    "chromadb>=1.1.1",
    "fastapi>=0.118.2",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "numpy>=2.3.3",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "qiniu>=7.17.0",
    "requests>=2.32.5",
]
