[project]
name = "service"
version = "0.1"
description = "This project is the web servcie sub-system for if.u projuect"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-ocr-api20210707>=3.1.3",
    "alibabacloud-tea-openapi>=0.4.1",
    "fastapi>=0.118.3",
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "qiniu>=7.17.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
